
- Increased hook name field lengths from 60 to 100 characters.

- Upgraded jQuery to 1.6.3.

- Fixed issue with DoctrineExtensions plugin and short URLs - issue #91.

- Adjusted installer to handle multilingual custom SQL files.

- Upgraded PHPIDS to 0.7.0.

- Fixed issue where restoring defauls for a module, the localization wasn't used (issue #71)


CHANGELOG - ZIKULA 1.3.0
------------------------

- Moved minimum PHP version to 5.3.2.

- Removed support for PHP register_globals and magic_quotes_gpc.

- Created new OO MVC module format.

- Introduced event notification system and added various events through out the core execution cycle for easy customisation and extension.

- Added system-wide and module specific event based plugin system (called 'system plugins' and 'module plugins'.

- Introduced a completely new module hooks system.

- Deprecated the old hooks system.

- Removed ADODB.

- Introduced Doctrine 1.2.4 and shifted entire object library to use Doctrine.

- Introduced Doctrine 2.0.5 as a plugin (was introduced after the PHP requirements were changed mid development).

- Introduced SwiftMailer as a plugin service.

- Upgraded to PHPMailer 5.1.

- Replaced SafeHTML with HTMLPurifier.

- Added PHPIDS intrusion protection support.

- Introduced LivePipe UI library.

- Added support for jQuery 1.6.1. with noConflict automatically set.

- Created a new Zikula.UI ajax interface and library.

- Large overhaul of interfaces to introduce AJAX into administration and give a more modern look and feel in the administration areas.

- Replaced CSRF protection system with new token system to make false hits less frequent and does not break with tabbed browsing.  Introduced an additional option which does not interfere the browser back button.

- Improved installer - less steps, less fiddling required and no need to
delete installation/upgrade scripts and less post install/upgrade steps like the requirement to delete install- and upgrade.php to access