@@ -29,6 +29,8 @@ CHANGELOG - ZIKULA 1.3.1
 
 - Fixed issue where restoring defauls for a module, the localization wasn't used (issue #71)
 
+- Fixed issue where pager wasn't able to parse array with three dimensions (issue #111)
+
 
 CHANGELOG - ZIKULA 1.3.0
 ------------------------
